// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays accessible error if no id match 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c4 {
  color: white;
  text-align: center;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c3 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c3 {
    display: none;
  }
}

@media (min-width:480px) {
  .c5 > *:first-child {
    margin-left: auto;
  }
}

@media (min-width:480px) {
  .c5 > * {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:480px) {
  .c5 > *:only-child {
    max-width: 30%;
  }
}

@media print {
  .c5 {
    display: none;
  }
}

@media print {
  .c4 {
    color: white;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Error
      </h1>
      <p>
        no contest exists for id 
        <code>
          "
          foobar
          "
        </code>
      </p>
      <button
        class="c2"
        type="button"
      >
        Start Over
      </button>
    </div>
  </main>
  <nav
    class="c3"
  >
    <button
      class="c2"
      type="button"
    >
      Next
    </button>
    <button
      class="c2"
      type="button"
    >
      Previous
    </button>
    <p
      class="c4"
    >
      0
       of 
      20
    </p>
  </nav>
  <nav
    class="c5"
  >
    <button
      class="c2"
      type="button"
    >
      Review
    </button>
    <button
      class="c2"
      type="button"
    >
      Help
    </button>
    <button
      class="c2"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;

exports[`doesn't display help and settings pages if disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
}

.c4 {
  line-height: 1.2;
  max-width: 66ch;
}

.c4 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + h2 {
  margin-top: -0.75rem;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c10 {
  color: white;
  text-align: center;
}

.c3 {
  font-weight: 600;
  text-transform: uppercase;
}

.c2 {
  margin: 0 0.25rem 1rem;
}

.c5 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c6 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c7 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c4 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c8 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c8 {
    display: none;
  }
}

@media (min-width:480px) {
  .c11 > *:first-child {
    margin-left: auto;
  }
}

@media (min-width:480px) {
  .c11 > * {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:480px) {
  .c11 > *:only-child {
    max-width: 30%;
  }
}

@media print {
  .c11 {
    display: none;
  }
}

@media print {
  .c10 {
    color: white;
  }
}

@media (min-width:480px) {
  .c2 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c6 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class=""
      >
        <legend
          class="c2"
        >
          <small
            class="c3"
          >
            Federal Election
            <span
              class="visually-hidden"
            >
              .
            </span>
          </small>
          <div
            class="c4"
          >
            <h1>
              President
              <span
                class="visually-hidden"
              >
                .
              </span>
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c5"
        >
          <label
            class="c6"
            for="minnieMouse"
          >
            <input
              class="visually-hidden c7"
              id="minnieMouse"
              name="president"
              type="checkbox"
              value="minnieMouse"
            />
            <div
              class="c4"
            >
              <strong>
                Minnie Mouse
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Mouse
            </div>
          </label>
          <label
            class="c6"
            for="mickeyMouse"
          >
            <input
              class="visually-hidden c7"
              id="mickeyMouse"
              name="president"
              type="checkbox"
              value="mickeyMouse"
            />
            <div
              class="c4"
            >
              <strong>
                Mickey Mouse
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Mouse
            </div>
          </label>
          <label
            class="c6"
            for="donaldDuck"
          >
            <input
              class="visually-hidden c7"
              id="donaldDuck"
              name="president"
              type="checkbox"
              value="donaldDuck"
            />
            <div
              class="c4"
            >
              <strong>
                Donald Duck
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Duck
            </div>
          </label>
          <label
            class="c6"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c7"
              id="writeInCandidate"
              name="president"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="c4"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="c8"
  >
    <button
      class="c9"
      type="button"
    >
      Next
    </button>
    <button
      class="c9"
      type="button"
    >
      Previous
    </button>
    <p
      class="c10"
    >
      1
       of 
      2
    </p>
  </nav>
  <nav
    class="c11"
  >
    <button
      class="c9"
      type="button"
    >
      Review
    </button>
  </nav>
</div>
`;

exports[`renders ContestPage 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
}

.c4 {
  line-height: 1.2;
  max-width: 66ch;
}

.c4 h1 {
  line-height: 1.1;
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + h2 {
  margin-top: -0.75rem;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c10 {
  color: white;
  text-align: center;
}

.c3 {
  font-weight: 600;
  text-transform: uppercase;
}

.c2 {
  margin: 0 0.25rem 1rem;
}

.c5 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  cursor: pointer;
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  background: white;
  border-right: 1px solid;
  border-color: lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
  color: #028099;
}

.c6 > div {
  word-break: break-word;
  padding: 0.5rem 0.5rem 0.5rem 4rem;
}

.c7 {
  margin-right: 0.5rem;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c4 {
    line-height: 1.3;
  }
}

@media (min-width:480px) {
  .c8 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c8 {
    display: none;
  }
}

@media (min-width:480px) {
  .c11 > *:first-child {
    margin-left: auto;
  }
}

@media (min-width:480px) {
  .c11 > * {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:480px) {
  .c11 > *:only-child {
    max-width: 30%;
  }
}

@media print {
  .c11 {
    display: none;
  }
}

@media print {
  .c10 {
    color: white;
  }
}

@media (min-width:480px) {
  .c2 {
    margin: 0 1rem 1rem;
    margin-left: 4rem;
  }
}

@media (min-width:480px) {
  .c6 > div {
    padding: 1rem 1rem 1rem inherit;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class=""
      >
        <legend
          class="c2"
        >
          <small
            class="c3"
          >
            Federal Election
            <span
              class="visually-hidden"
            >
              .
            </span>
          </small>
          <div
            class="c4"
          >
            <h1>
              President and Vice-President of the United States
              <span
                class="visually-hidden"
              >
                .
              </span>
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c5"
        >
          <label
            class="c6"
            for="barchi-hallaren"
          >
            <input
              class="visually-hidden c7"
              id="barchi-hallaren"
              name="president"
              type="checkbox"
              value="barchi-hallaren"
            />
            <div
              class="c4"
            >
              <strong>
                Joseph Barchi and Joseph Hallaren
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Federalist
            </div>
          </label>
          <label
            class="c6"
            for="cramer-vuocolo"
          >
            <input
              class="visually-hidden c7"
              id="cramer-vuocolo"
              name="president"
              type="checkbox"
              value="cramer-vuocolo"
            />
            <div
              class="c4"
            >
              <strong>
                Adam Cramer and Greg Vuocolo
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              People's
            </div>
          </label>
          <label
            class="c6"
            for="court-blumhardt"
          >
            <input
              class="visually-hidden c7"
              id="court-blumhardt"
              name="president"
              type="checkbox"
              value="court-blumhardt"
            />
            <div
              class="c4"
            >
              <strong>
                Daniel Court and Amy Blumhardt
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Liberty
            </div>
          </label>
          <label
            class="c6"
            for="boone-lian"
          >
            <input
              class="visually-hidden c7"
              id="boone-lian"
              name="president"
              type="checkbox"
              value="boone-lian"
            />
            <div
              class="c4"
            >
              <strong>
                Alvin Boone and James Lian
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Constitution
            </div>
          </label>
          <label
            class="c6"
            for="hildebrand-garritty"
          >
            <input
              class="visually-hidden c7"
              id="hildebrand-garritty"
              name="president"
              type="checkbox"
              value="hildebrand-garritty"
            />
            <div
              class="c4"
            >
              <strong>
                Ashley Hildebrand-MacDougall and James Garritty
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Whig
            </div>
          </label>
          <label
            class="c6"
            for="patterson-lariviere"
          >
            <input
              class="visually-hidden c7"
              id="patterson-lariviere"
              name="president"
              type="checkbox"
              value="patterson-lariviere"
            />
            <div
              class="c4"
            >
              <strong>
                Martin Patterson and Clay Lariviere
              </strong>
              <span
                class="visually-hidden"
              >
                ,
              </span>
              <br />
              Labor
            </div>
          </label>
          <label
            class="c6"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c7"
              id="writeInCandidate"
              name="president"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="c4"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="c8"
  >
    <button
      class="c9"
      type="button"
    >
      Next
    </button>
    <button
      class="c9"
      type="button"
    >
      Previous
    </button>
    <p
      class="c10"
    >
      1
       of 
      20
    </p>
  </nav>
  <nav
    class="c11"
  >
    <button
      class="c9"
      type="button"
    >
      Review
    </button>
    <button
      class="c9"
      type="button"
    >
      Help
    </button>
    <button
      class="c9"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;

exports[`renders error if no id match 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 1rem 0.5rem 2rem;
}

.c1 {
  width: 100%;
  max-width: 35rem;
  margin: 0 auto;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > *:first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c5 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c4 {
  color: white;
  text-align: center;
}

@media (min-width:480px) {
  .c0 {
    padding: 2rem 1rem;
  }
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c1 {
    max-width: 100%;
    margin: 0;
  }
}

@media (min-width:480px) {
  .c3 > *:only-child {
    margin: auto;
    max-width: 30%;
  }
}

@media print {
  .c3 {
    display: none;
  }
}

@media (min-width:480px) {
  .c5 > *:first-child {
    margin-left: auto;
  }
}

@media (min-width:480px) {
  .c5 > * {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:480px) {
  .c5 > *:only-child {
    max-width: 30%;
  }
}

@media print {
  .c5 {
    display: none;
  }
}

@media print {
  .c4 {
    color: white;
  }
}

<div>
  <main
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Error
      </h1>
      <p>
        no contest exists for id 
        <code>
          "
          foobar
          "
        </code>
      </p>
      <button
        class="c2"
        type="button"
      >
        Start Over
      </button>
    </div>
  </main>
  <nav
    class="c3"
  >
    <button
      class="c2"
      type="button"
    >
      Next
    </button>
    <button
      class="c2"
      type="button"
    >
      Previous
    </button>
    <p
      class="c4"
    >
      0
       of 
      20
    </p>
  </nav>
  <nav
    class="c5"
  >
    <button
      class="c2"
      type="button"
    >
      Review
    </button>
    <button
      class="c2"
      type="button"
    >
      Help
    </button>
    <button
      class="c2"
      type="button"
    >
      Settings
    </button>
  </nav>
</div>
`;
